--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>كان علي (الصحوة النهائية) / #MAGA vs #METOO</title>
+  <title>#METOO vs #MAGA</title>
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=1200">
@@ -21,7 +21,7 @@
 <body>
   <main>
   <section class="visualization">
-      <h1>بيع نفسه ، والتضحية للجميع ، من أجل متعة سيده.</h1>
+      <h1>#METOO vs #MAGA: A Twitter Visualization</h1>
       <div class="legend">
         <div class="legend-status">
           <div class="btn-group btn-group-sm legend__items" role="group" aria-label="Filter by status"></div>
