--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
   <section class="visualization">
       <h1>#METOO vs #MAGA: A Twitter Visualization</h1>
       <div text-align="center">
+        <h3>Some Introduction</h3>
+         <p>googoogajub</p> 
+      </div>
+      <div text-align="center">
         <svg id= "time_series1" width="960" height="500"></svg>
       </div>
 <!--       <div class="legend">
