--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <script src="https://d3js.org/d3.v4.min.js" defer></script>
   <!-- <script src="https://d3js.org/d3-scale-chromatic.v1.min.js" defer></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js"></script>
+  <script src="model.js" defer></script>
   <script src="time.js" defer></script>
   <!--<script src="view.js" defer></script> -->
   <!-- <script src="controller.js" defer></script> -->
