--- a/index.html
+++ b/index.html
@@ -49,14 +49,15 @@
           <div class="infobox__content small"></div>
           <div class="infobox__fade infobox__fade--bottom"></div>
         </div>
-      </div>
+      </div> -->
       <div class="d-flex justify-content-center">
         <div class="controls btn-group" role="group" aria-label="View by">
-            <button id="show-target-role" type="button" class="btn btn-light active">Do this</button>
-            <button id="show-perp-role" type="button" class="btn btn-light">Do that</button>
-            <button id="show-powergap" type="button" class="btn btn-light">Ok</button>
+            <button id="show-replies" type="button" class="btn btn-light active">Replies</button>
+            <button id="show-retweets" type="button" class="btn btn-light">Retweets</button>
+            <button id="show-likes" type="button" class="btn btn-light">Likes</button>
+            <button id="show-ratio" type="button" class="btn btn-light">Ratio</button>
           </div>
-      </div> -->
+      </div> 
     </section>
   </main>
 </body>
