--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
   <!-- <script src="https://d3js.org/d3-scale-chromatic.v1.min.js" defer></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js"></script>
   <script src="model.js" defer></script>
-  <script src="time.js" defer></script>
-  <!--<script src="view.js" defer></script> -->
-  <!-- <script src="controller.js" defer></script> -->
+  <!--   <script src="time.js" defer></script> -->
+  <script src="plot.js" defer></script>
 </head>
 <body>
   <main>
@@ -37,7 +36,8 @@
           </div>
       </div> 
       <div text-align="center">
-        <svg id= "time_series1" width="960" height="500"></svg>
+        <!-- <svg id= "time_series1" width="960" height="500"></svg> -->
+        <svg id= "time_series1" width="960" height="1000"></svg>
       </div>
 <!--       <div class="legend">
         <div class="legend-status">
