--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <button id="show-replies" type="button" class="btn btn-light active">Replies</button>
             <button id="show-retweets" type="button" class="btn btn-light">Retweets</button>
             <button id="show-likes" type="button" class="btn btn-light">Likes</button>
+            <button id="show-total" type="button" class="btn btn-light">Total</button>
             <button id="show-ratio" type="button" class="btn btn-light">Ratio</button>
           </div>
       </div> 
