--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       <div text-align="center">
         <!-- <svg id= "time_series1" width="960" height="500"></svg> -->
         <svg id= "time_series1" width="960" height="1000"></svg>
+        <!-- <div id='tooltip' style='position:absolute;background-color:lightgray;padding:5px'></div> -->
       </div>
     </section>
   </main>
