--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <!-- <div id='tooltip' style='position:absolute;background-color:lightgray;padding:5px'></div> -->
       </div>
       <!-- For Upset Plots -->
-      <div id="venn"></div>
-      <div id="chart2"></div>
+      <div id="venn" width="1000" height="500"></div>
+      <div id="chart2" width="1000" height="500"></div>
     </section>
   </main>
 </body>
