--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
         <!-- <div id='tooltip' style='position:absolute;background-color:lightgray;padding:5px'></div> -->
       </div>
       <!-- For Upset Plots -->
+      <div class="controls btn-group" role="group" aria-label="View by">
+            <button id="show-hb" type="button" class="btn btn-light">See Hashtag Breakdown</button>
+      </div>
       <div id="venn" width="1000" height="500"></div>
       <div id="chart2" width="1000" height="500"></div>
     </section>
