--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
       </div>
       <!-- For Upset Plots -->
       <div class="controls btn-group" role="group" aria-label="View by">
-            <button id="show-hb" type="button" class="btn btn-light">See Hashtag Breakdown</button>
+            <button id="show-hbMAGA" type="button" class="btn btn-light">See #MAGA Tweets Breakdown</button>
+            <button id="show-hbMETOO" type="button" class="btn btn-light">See #METOO Tweets Breakdown</button>
       </div>
       <div id="venn" width="1000" height="500"></div>
       <div id="chart2" width="1000" height="500"></div>
