adding intro blurbs

--- a/index.html
+++ b/index.html
@@ -23,10 +23,14 @@
 <body>
   <main>
   <section class="visualization">
-      <h1>#METOO vs #MAGA: A Twitter Visualization</h1>
-      <div text-align="center">
-        <h3>Some Introduction</h3>
-         <p>googoogajub</p> 
+      <h1>#MeToo and #MAGA: A Tale of Two Hashtags</h1>
+      <div text-align="center" style="width:60%;margin-left: 20%;">
+        <p>#MeToo and #MAGA are two hashtags at odds with each other that represent the opposite ends of the political spectrum in 2010s America. While #MeToo was very explicitly a Twitter-borne movement, #MAGA (acronym for #MakeAmericaGreatAgain) is a slogan of a presidentical campaign and resulting presidency very much driven by the Twitter horn.</p> 
+        <p>This visualization tracks the history of each hashtag's popularity over the course of time, as well as seeing how other hashtags come into play in a particular time period specified by you.</p>
+        <h3>So... what might you look for?</h3>
+         <p>How do notable events affect each hashtag, if at all?</p> 
+         <p>Does one hashtag's popularity affect the other's?</p>
+         <p>Is there an interaction between the two sides of the spectrum in the content of the tweets?</p>
       </div>
       <div class="d-flex justify-content-center">
         <div class="controls btn-group" role="group" aria-label="View by">
