--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
          <p>Does one hashtag's popularity affect the other's?</p>
          <p>Is there an interaction between the two sides of the spectrum in the content of the tweets?</p>
       </div>
+      <div >
+        <table style="width:100%;margin-left: 00%;">
+          <tr>
+            <td><blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">“What’s completely unacceptable is for Congesswoman Omar to target Jews, in this case Stephen Miller.” Jeff Ballabon, B2 Strategic, CEO.  <a href="https://twitter.com/Varneyco?ref_src=twsrc%5Etfw">@Varneyco</a></p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/1115639577102962691?ref_src=twsrc%5Etfw">April 9, 2019</a></blockquote>
+          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></td>
+            <td><blockquote class="twitter-tweet" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr">Introducing our new podcast, &quot;Hear the Bern,&quot; hosted by <a href="https://twitter.com/briebriejoy?ref_src=twsrc%5Etfw">@briebriejoy</a>! Hear all about the people, stories and ideas that are driving this political revolution. Episode 1 is live on Spotify, Google Play and iTunes. Tune in! <a href="https://twitter.com/hashtag/HeartheBern?src=hash&amp;ref_src=twsrc%5Etfw">#HeartheBern</a> <a href="https://t.co/ou7fy5Q7sE">https://t.co/ou7fy5Q7sE</a></p>&mdash; Bernie Sanders (@BernieSanders) <a href="https://twitter.com/BernieSanders/status/1115616810412519425?ref_src=twsrc%5Etfw">April 9, 2019</a></blockquote>
+          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></td>
+          </tr>
+        </table>
+      </div>
       <div class="d-flex justify-content-center">
         <div class="controls btn-group" role="group" aria-label="View by">
             <button id="show-replies" type="button" class="btn btn-light active">Replies</button>
