--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
       <div >
         <table style="width:100%;margin-left: 00%;">
           <tr>
-            <td><blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">“What’s completely unacceptable is for Congesswoman Omar to target Jews, in this case Stephen Miller.” Jeff Ballabon, B2 Strategic, CEO.  <a href="https://twitter.com/Varneyco?ref_src=twsrc%5Etfw">@Varneyco</a></p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/1115639577102962691?ref_src=twsrc%5Etfw">April 9, 2019</a></blockquote>
+            <td><blockquote class="twitter-tweet" data-lang="en" id="tweet1"><p lang="en" dir="ltr">“What’s completely unacceptable is for Congesswoman Omar to target Jews, in this case Stephen Miller.” Jeff Ballabon, B2 Strategic, CEO.  <a href="https://twitter.com/Varneyco?ref_src=twsrc%5Etfw">@Varneyco</a></p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/1115639577102962691?ref_src=twsrc%5Etfw">April 9, 2019</a></blockquote>
           <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></td>
-            <td><blockquote class="twitter-tweet" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr">Introducing our new podcast, &quot;Hear the Bern,&quot; hosted by <a href="https://twitter.com/briebriejoy?ref_src=twsrc%5Etfw">@briebriejoy</a>! Hear all about the people, stories and ideas that are driving this political revolution. Episode 1 is live on Spotify, Google Play and iTunes. Tune in! <a href="https://twitter.com/hashtag/HeartheBern?src=hash&amp;ref_src=twsrc%5Etfw">#HeartheBern</a> <a href="https://t.co/ou7fy5Q7sE">https://t.co/ou7fy5Q7sE</a></p>&mdash; Bernie Sanders (@BernieSanders) <a href="https://twitter.com/BernieSanders/status/1115616810412519425?ref_src=twsrc%5Etfw">April 9, 2019</a></blockquote>
+            <td><blockquote class="twitter-tweet" data-cards="hidden" data-lang="en" id="tweet2"><p lang="en" dir="ltr">Introducing our new podcast, &quot;Hear the Bern,&quot; hosted by <a href="https://twitter.com/briebriejoy?ref_src=twsrc%5Etfw">@briebriejoy</a>! Hear all about the people, stories and ideas that are driving this political revolution. Episode 1 is live on Spotify, Google Play and iTunes. Tune in! <a href="https://twitter.com/hashtag/HeartheBern?src=hash&amp;ref_src=twsrc%5Etfw">#HeartheBern</a> <a href="https://t.co/ou7fy5Q7sE">https://t.co/ou7fy5Q7sE</a></p>&mdash; Bernie Sanders (@BernieSanders) <a href="https://twitter.com/BernieSanders/status/1115616810412519425?ref_src=twsrc%5Etfw">April 9, 2019</a></blockquote>
           <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></td>
           </tr>
         </table>
@@ -61,8 +61,22 @@
             <button id="show-hbMAGA" type="button" class="btn btn-light">See #MAGA Tweets Breakdown</button>
             <button id="show-hbMETOO" type="button" class="btn btn-light">See #METOO Tweets Breakdown</button>
       </div>
-      <div id="venn" width="1000" height="500"></div>
-      <div id="chart2" width="1000" height="500"></div>
+      <div >
+        <table style="width:100%;margin-left: 00%;">
+          <tr>
+            <td>
+              <div id="venn1" width="500" height="500"></div> 
+            </td>
+            <td>
+              <div id="venn2" width="500" height="500"></div> 
+            </td>
+          </tr>
+        </table>
+      </div>
+
+
+     <!--  <div id="venn" width="1000" height="500"></div> -->
+ <!--      <div id="chart2" width="1000" height="500"></div> -->
     </section>
   </main>
 </body>
