--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
       </div>
       <!-- For Upset Plots -->
       <div class="controls btn-group" role="group" aria-label="View by">
-            <button id="show-hbMAGA" type="button" class="btn btn-light">See #MAGA Tweets Breakdown</button>
-            <button id="show-hbMETOO" type="button" class="btn btn-light">See #METOO Tweets Breakdown</button>
+            <button id="show-hb" type="button" class="btn btn-light">Update Hashtag Breakdown</button>
+            <!-- <button id="show-hbMETOO" type="button" class="btn btn-light">See #METOO Tweets Breakdown</button> -->
       </div>
       <div >
         <table style="width:100%;margin-left: 00%;">
