--- a/index.html
+++ b/index.html
@@ -27,6 +27,35 @@
       <div text-align="center" style="width:60%;margin-left: 20%;">
         <p>#MeToo and #MAGA are two hashtags at odds with each other that represent the opposite ends of the political spectrum in 2010s America. While #MeToo was very explicitly a Twitter-borne movement, #MAGA (acronym for #MakeAmericaGreatAgain) is a slogan of a presidentical campaign and resulting presidency very much driven by the Twitter horn.</p> 
         <p>This visualization tracks the history of each hashtag's popularity over the course of time, as well as seeing how other hashtags come into play in a particular time period specified by you.</p>
+        <table>
+          <tr>
+            <td>
+              <div style="width:100%">
+                <img src="metoo_tweet.png" alt="Alyssa Milano MeToo Tweet 919659438700670976" style="width:100%">
+              </div>
+            </td>
+            <td>
+              <div style="width:100%">
+                <img src="maga_tweet.png" alt="Donald Trump MAGA Tweet 610838591242137600"style="width:100%">
+              </div>
+            </td>
+          </tr>
+        </table>
+        <br/>
+        <h2>Event Significance</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <h2>What about other #hashtags?</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <h3>So... what might you look for?</h3>
          <p>How do notable events affect each hashtag, if at all?</p> 
          <p>Does one hashtag's popularity affect the other's?</p>
