--- a/index.html
+++ b/index.html
@@ -49,6 +49,21 @@
         consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
         cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
         proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <div text-align="center">
+        <!-- <svg id= "time_series1" width="960" height="500"></svg> -->
+          <svg id= "static_ts1" width="960" height="300"></svg>
+          <!-- <div id='tooltip' style='position:absolute;background-color:lightgray;padding:5px'></div> -->
+        </div>
+        <div text-align="center">
+        <!-- <svg id= "time_series1" width="960" height="500"></svg> -->
+          <svg id= "static_ts2" width="960" height="300"></svg>
+          <!-- <div id='tooltip' style='position:absolute;background-color:lightgray;padding:5px'></div> -->
+        </div>
+        <div text-align="center">
+        <!-- <svg id= "time_series1" width="960" height="500"></svg> -->
+          <svg id= "static_ts3" width="960" height="300"></svg>
+          <!-- <div id='tooltip' style='position:absolute;background-color:lightgray;padding:5px'></div> -->
+        </div>
         <h2>What about other #hashtags?</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
