adding more story

--- a/index.html
+++ b/index.html
@@ -43,12 +43,7 @@
         </table>
         <br/>
         <h2>Event Significance</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Comparing the #MeToo trends to #MAGA’s in the October 2017-April 2018 period, one can see that #MeToo popularity is probably a lot more event-dependent than #MAGA with more extreme peaks.</p>
         <div text-align="center">
         <!-- <svg id= "time_series1" width="960" height="500"></svg> -->
           <svg id= "static_ts1" width="960" height="300"></svg>
@@ -59,18 +54,25 @@
           <svg id= "static_ts2" width="960" height="300"></svg>
           <!-- <div id='tooltip' style='position:absolute;background-color:lightgray;padding:5px'></div> -->
         </div>
+        <p>This however is less the case with #MAGA (or, in this case, #MakeAmericaGreatAgain)’s trends in 2015 when it started becoming more commonly used in Twitter.</p>
         <div text-align="center">
         <!-- <svg id= "time_series1" width="960" height="500"></svg> -->
           <svg id= "static_ts3" width="960" height="300"></svg>
           <!-- <div id='tooltip' style='position:absolute;background-color:lightgray;padding:5px'></div> -->
         </div>
         <h2>What about other #hashtags?</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>When writing tweets, you’re not restricted to just using one hashtag! The following graphics show the top 20 most popular associated hashtags for #MAGA and #MeToo.</p>
+        <div text-align="center">
+        <!-- <svg id= "time_series1" width="960" height="500"></svg> -->
+          <svg id= "static_bar1" width="960" height="300"></svg>
+          <!-- <div id='tooltip' style='position:absolute;background-color:lightgray;padding:5px'></div> -->
+        </div>
+        <div text-align="center">
+        <!-- <svg id= "time_series1" width="960" height="500"></svg> -->
+          <svg id= "static_bar2" width="960" height="300"></svg>
+          <!-- <div id='tooltip' style='position:absolute;background-color:lightgray;padding:5px'></div> -->
+        </div>
+        <p>Hashtag usage tends to be heavier with #MAGA, but #MeToo tweets feature more hashtags that refer to the other side of the spectrum including #MAGA itself (4th most popular). Both hashtags also give love to #resist and #theresistance, although possibly under different contexts.</p>
         <h3>So... what might you look for?</h3>
          <p>How do notable events affect each hashtag, if at all?</p> 
          <p>Does one hashtag's popularity affect the other's?</p>
