--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
           <tr>
             <td>
               <div style="width:100%">
-                <!-- <img src="metoo_tweet.png" alt="Alyssa Milano MeToo Tweet 919659438700670976" style="width:100%"> -->
-                <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">If you’ve been sexually harassed or assaulted write ‘me too’ as a reply to this tweet. <a href="https://t.co/k2oeCiUf9n">pic.twitter.com/k2oeCiUf9n</a></p>&mdash; Alyssa Milano (@Alyssa_Milano) <a href="https://twitter.com/Alyssa_Milano/status/919659438700670976?ref_src=twsrc%5Etfw">October 15, 2017</a></blockquote>
-                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                <!-- <img src="maga_tweet.png" alt="Donald Trump MAGA Tweet 610838591242137600"style="width:100%"> -->
+               <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">I am officially running for President of the United States. <a href="https://twitter.com/hashtag/MakeAmericaGreatAgain?src=hash&amp;ref_src=twsrc%5Etfw">#MakeAmericaGreatAgain</a> <a href="https://t.co/Ct0lNu7kz0">https://t.co/Ct0lNu7kz0</a></p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/610838591242137600?ref_src=twsrc%5Etfw">June 16, 2015</a></blockquote>
+              <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
               </div>
             </td>
             <td>
               <div style="width:100%">
-                <!-- <img src="maga_tweet.png" alt="Donald Trump MAGA Tweet 610838591242137600"style="width:100%"> -->
-               <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">I am officially running for President of the United States. <a href="https://twitter.com/hashtag/MakeAmericaGreatAgain?src=hash&amp;ref_src=twsrc%5Etfw">#MakeAmericaGreatAgain</a> <a href="https://t.co/Ct0lNu7kz0">https://t.co/Ct0lNu7kz0</a></p>&mdash; Donald J. Trump (@realDonaldTrump) <a href="https://twitter.com/realDonaldTrump/status/610838591242137600?ref_src=twsrc%5Etfw">June 16, 2015</a></blockquote>
-              <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+              <!-- <img src="metoo_tweet.png" alt="Alyssa Milano MeToo Tweet 919659438700670976" style="width:100%"> -->
+                <blockquote class="twitter-tweet" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr">If you’ve been sexually harassed or assaulted write ‘me too’ as a reply to this tweet. <a href="https://t.co/k2oeCiUf9n">pic.twitter.com/k2oeCiUf9n</a></p>&mdash; Alyssa Milano (@Alyssa_Milano) <a href="https://twitter.com/Alyssa_Milano/status/919659438700670976?ref_src=twsrc%5Etfw">October 15, 2017</a></blockquote>
+                  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
               </div>
             </td>
           </tr>
