--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>#METOO vs #MAGA</title>
+  <title>#MAGA vs #MeToo</title>
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=1200">
@@ -24,9 +24,9 @@
 <body>
   <main>
   <section class="visualization">
-      <h1>#MeToo and #MAGA: A Tale of Two Hashtags</h1>
+      <h1>#MAGA and #MeToo: A Tale of Two Hashtags</h1>
       <div text-align="center" style="width:60%;margin-left: 20%;">
-        <p>#MeToo and #MAGA are two hashtags at odds with each other that represent the opposite ends of the political spectrum in 2010s America. While #MeToo was very explicitly a Twitter-borne movement, #MAGA (acronym for #MakeAmericaGreatAgain) is a slogan of a presidentical campaign and resulting presidency very much driven by the Twitter horn.</p> 
+        <p>#MAGA and # MeToo are two hashtags at odds with each other that represent the opposite ends of the political spectrum in 2010s America. While #MeToo was very explicitly a Twitter-borne movement, #MAGA (acronym for #MakeAmericaGreatAgain) is a slogan of a presidentical campaign and resulting presidency very much driven by the Twitter horn.</p> 
         <p>This visualization tracks the history of each hashtag's popularity over the course of time, as well as seeing how other hashtags come into play in a particular time period specified by you.</p>
         <table>
           <tr>
@@ -51,30 +51,30 @@
         <p>Comparing the #MeToo trends to #MAGA’s in the October 2017-April 2018 period, one can see that #MeToo popularity is probably a lot more event-dependent than #MAGA with more extreme peaks.</p>
         <div text-align="center">
         <!-- <svg id= "time_series1" width="960" height="500"></svg> -->
-          <svg id= "static_ts1" width="960" height="300"></svg>
+          <img id= "static_ts1" src="ts1.jpg" width="720"></img>
           <!-- <div id='tooltip' style='position:absolute;background-color:lightgray;padding:5px'></div> -->
         </div>
         <div text-align="center">
         <!-- <svg id= "time_series1" width="960" height="500"></svg> -->
-          <svg id= "static_ts2" width="960" height="300"></svg>
+          <img id= "static_ts2" src="ts2.jpg" width="720"></img>
           <!-- <div id='tooltip' style='position:absolute;background-color:lightgray;padding:5px'></div> -->
         </div>
         <p>This however is less the case with #MAGA (or, in this case, #MakeAmericaGreatAgain)’s trends in 2015 when it started becoming more commonly used in Twitter.</p>
         <div text-align="center">
         <!-- <svg id= "time_series1" width="960" height="500"></svg> -->
-          <svg id= "static_ts3" width="960" height="300"></svg>
+          <img id= "static_ts3" src="ts3.jpg" width="720"></img>
           <!-- <div id='tooltip' style='position:absolute;background-color:lightgray;padding:5px'></div> -->
         </div>
         <h2>What about other #hashtags?</h2>
         <p>When writing tweets, you’re not restricted to just using one hashtag! The following graphics show the top 20 most popular associated hashtags for #MAGA and #MeToo.</p>
         <div text-align="center">
         <!-- <svg id= "time_series1" width="960" height="500"></svg> -->
-          <svg id= "static_bar1" width="960" height="300"></svg>
+          <img id= "static_bar1" src="bc1.png" width="720"></img>
           <!-- <div id='tooltip' style='position:absolute;background-color:lightgray;padding:5px'></div> -->
         </div>
         <div text-align="center">
         <!-- <svg id= "time_series1" width="960" height="500"></svg> -->
-          <svg id= "static_bar2" width="960" height="300"></svg>
+          <img id= "static_bar2" src="bc2.png" width="720"></img>
           <!-- <div id='tooltip' style='position:absolute;background-color:lightgray;padding:5px'></div> -->
         </div>
         <p>Hashtag usage tends to be heavier with #MAGA, but #MeToo tweets feature more hashtags that refer to the other side of the spectrum including #MAGA itself (4th most popular). Both hashtags also give love to #resist and #theresistance, although possibly under different contexts.</p>
@@ -115,7 +115,7 @@
             </div>
             </td>
             <td>
-            <h3 style="color:steelBlue">#METOO</h3>
+            <h3 style="color:steelBlue">#MeToo</h3>
             <div class="tweetEntry" id="tweetMETOO">
                   <div class="tweetEntry-content">
                     <a class="tweetEntry-account-group" href="[accountURL]">
