--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <button id="show-ratio" type="button" class="btn btn-light">Ratio</button>
           </div>
       </div> 
-      <div text-align="center">
+      <div text-align="justify">
         <!-- <svg id= "time_series1" width="960" height="500"></svg> -->
         <svg id= "time_series1" width="960" height="500"></svg>
         <!-- <div id='tooltip' style='position:absolute;background-color:lightgray;padding:5px'></div> -->
