--- a/index.html
+++ b/index.html
@@ -160,11 +160,15 @@
         <!-- <div id='tooltip' style='position:absolute;background-color:lightgray;padding:5px'></div> -->
       </div>
       <!-- For Upset Plots -->
+        <h3>How did #MAGA and #METOO start and develop over time?</h3>
+         <p>Click the Align Button to compare the progression of #MAGA and #METOO since their respective birth.</p> 
        <div class="controls btn-group" role="group" aria-label="View by">
             <button id="align" type="button" class="btn btn-light">Align By Start Date</button>
             <button id="dealign" type="button" class="btn btn-light">Dealign</button>
             <!-- <button id="show-hbMETOO" type="button" class="btn btn-light">See #METOO Tweets Breakdown</button> -->
       </div>
+        <h3>Hashtags can tell a story too.</h3>
+         <p>To inspect co-occuring hashtags over a specific period, brush and choose a time span and click the following button.</p> 
       <div class="controls btn-group" role="group" aria-label="View by">
             <button id="show-hb" type="button" class="btn btn-light">See Hashtag Breakdown</button>
             <!-- <button id="show-hbMETOO" type="button" class="btn btn-light">See #METOO Tweets Breakdown</button> -->
@@ -181,10 +185,8 @@
           </tr>
         </table>
       </div>
-
-
      <!--  <div id="venn" width="1000" height="500"></div> -->
- <!--      <div id="chart2" width="1000" height="500"></div> -->
+     <!--  <div id="chart2" width="1000" height="500"></div> -->
     </section>
   </main>
 </body>
