--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
          <p>Does one hashtag's popularity affect the other's?</p>
          <p>Is there an interaction between the two sides of the spectrum in the content of the tweets?</p>
       </div>
+      <h3>Beside Likes, Reweets, and Replies, we also look at Total and Ratio of Tweets.</h3>
+         <h4>Total = Likes + Retweets + Replies</h4>
+         <p>Total can be thought of as an indicator of a tweet's overall popularity.</p> 
+         <h4>Ratio = (Likes + Retweets) / Replies</h4>
+         <p>Ratio indicates the degree to which people agree with a particular tweet. If the ratio of a tweet is low, it means that more people replied (presumably to argue or berate) than liked/retweeted, meaning that the tweet has not been received well.</p>       
       <div >
         <table style="width:60%;margin-left: 15%;">
           <tr>
