--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <button id="dealign" type="button" class="btn btn-light">Dealign</button>
             <!-- <button id="show-hbMETOO" type="button" class="btn btn-light">See #METOO Tweets Breakdown</button> -->
       </div>
-        <h3>Hashtags can tell a story too.</h3>
+        <h3>Other hashtags can tell a story too.</h3>
          <p>To inspect co-occuring hashtags over a specific period, brush and choose a time span and click the following button.</p> 
       <div class="controls btn-group" role="group" aria-label="View by">
             <button id="show-hb" type="button" class="btn btn-light">See Hashtag Breakdown</button>
